--- a/punch/platform_template/punchplatform-deployment.settings.j2
+++ b/punch/platform_template/punchplatform-deployment.settings.j2
@@ -281,18 +281,18 @@
           "opendistro_security": {
             "opendistro_security_version": "{{ version.opendistro_security }}",
             "local_ssl_certs_dir": "{{security.local_es_certs}}",
-            "admin_pemkey_name": "admin-key.pem",
-            "admin_pemcert_name": "admin-cert.pem",
-            "admin_pemtrustedcas_name": "cachain.pem",
-            "ssl_transport_pemkey_name": "node-key.pem",
-            "ssl_transport_pemcert_name": "node-cert.pem",
-            "ssl_transport_pemtrustedcas_name": "cachain.pem",
-            "ssl_http_enabled": false,
-            "ssl_http_pemkey_name": "server2-key.pem",
-            "ssl_http_pemcert_name": "server2-cert.pem",
-            "ssl_http_pemtrustedcas_name": "server2-cachain.pem",
-            "authcz_admin_dn": ["emailAddress=nodesuper1@thales.com,CN=nodesuper1,OU=ts,O=thales,L=paris,ST=idf,C=fr"],
-            "nodes_dn": ["emailAddress=nodesuper2@thales.com,CN=nodesuper2,OU=ts,O=thales,L=paris,ST=idf,C=fr"],
+            "admin_pemkey_name": "elasticsearch-admin-key.pem",
+            "admin_pemcert_name": "elasticsearch-admin-cert.pem",
+            "admin_pemtrustedcas_name": "elasticsearch-admin-ca.pem",
+            "ssl_transport_pemkey_name": "elasticsearch-node-key.pem",
+            "ssl_transport_pemcert_name": "elasticsearch-node-cert.pem",
+            "ssl_transport_pemtrustedcas_name": "elasticsearch-node-ca.pem",
+            "ssl_http_enabled": true,
+            "ssl_http_pemkey_name": "elasticsearch-http-server-key.pem",
+            "ssl_http_pemcert_name": "elasticsearch-http-server-cert.pem",
+            "ssl_http_pemtrustedcas_name": "elasticsearch-http-server-ca.pem",
+            "authcz_admin_dn": ["emailAddress=elasticsearch-admin-super-1@localhost.com,CN=elasticsearch-admin-super-1,OU=AC,O=AwsomeCompany,L=Paris,ST=IdF,C=FR"],
+            "nodes_dn": ["emailAddress=elasticsearch-node-super-1@localhost.com,CN=elasticsearch-node-super-1,OU=AC,O=AwsomeCompany,L=Paris,ST=IdF,C=FR"],
             "kibana_index": ".kibana-admin"
           },
           "opendistro_alerting": {
