--- a/punch/deployment_template/punchplatform-deployment.settings.j2
+++ b/punch/deployment_template/punchplatform-deployment.settings.j2
@@ -160,7 +160,7 @@
               "local_key_store_dir": "{{security.security_dir}}/{{server}}/gateway",
               "key_store_name": "gateway-keystore.p12",
               "key_store_type": "PKCS12",
-              "key_store_password": "test",
+              "key_store_password": "secret123",
               "key_alias": "gateway-server-key"
             },
             "es_client_ssl":{
@@ -296,6 +296,7 @@
             "opendistro_security_version": "{{ version.opendistro_security }}",
             "ssl_http_enabled": true,
             "ssl_transport_enforce_hostname_verification": true,
+            "rbac_using_ssl_certs": true,
             "authcz_admin_dn": [
               "emailAddress=admin-super-1@easyssl.com,CN=server2,OU=AC,O=AwsomeCompany,L=Paris,ST=IdF,C=FR"
             ],
@@ -387,13 +388,40 @@
         "type" : "administration"
         {% if security is defined %}
         ,
-        "server_ssl_enabled": false,
+        "server_ssl_enabled": true,
         "local_ssl_certs_dir": "{{security.security_dir}}/server1/kibana",
-        "server_ssl_key_name": "kibana-server-1-key.pem",
+        "server_ssl_key_name": "kibana-server-1-key-pkcs8.pem",
         "server_ssl_certificate_name": "kibana-server-1-cert.pem",
-        "elasticsearch_ssl_enabled": false,
-        "elasticsearch_ssl_verificationMode": "none",
+        "elasticsearch_ssl_enabled": true,
+        "elasticsearch_ssl_verificationMode": "full",
         "elasticsearch_ssl_certificateAuthorities_names": ["punch-ca.pem"]
+        {% endif %}
+        {% if gateway is defined %}
+        {% set server_ip = [] %}
+        {% set port = "4242" %}
+        {% if security is defined %}{% set scheme = "https" %}{% else %}{% set scheme = "http" %}{% endif %}
+        {% for server in gateway.servers  %}
+        {% set server_ip = server_ip.append( scheme + "://"+server+":"+port ) %}
+        {% endfor %}
+        ,
+        "plugins":{
+          "punchplatform": {
+            "punchplatform_version": "{{ version.punch }}",
+            "rest_api": {
+              "hosts": {{ server_ip | tojson }}
+              {% if security is defined %}
+              ,
+              "ssl":{
+                "enabled": true,
+                "certificate_authorities": ["punch-ca.pem"]
+              }
+              {% endif %}
+            }
+          },
+          "punchplatform_feedback": {
+            "punchplatform_feedback_version": "{{ version.punch }}"
+          }
+        }
         {% endif %}
       }
     },
@@ -401,33 +429,11 @@
     {% for server in kibana.servers %}
       "{{ server }}" : {
         "address" : "{{ server }}"
-      }
-      {% if not loop.last %}
-      ,
-      {% endif %} 
+      }{% if not loop.last %},{% endif %}
     {% endfor %}
     },
     "plugins":{
-      {% if gateway is defined %}
-      {% set server_ip = [] %}
-      {% set port = "4242" %}
-      {% for server in gateway.servers  %}
-      {% set server_ip = server_ip.append( "http://"+server+":"+port ) %}
-      {% endfor %}
-      "punchplatform": {
-        "punchplatform_version": "{{ version.punch }}",
-        "rest_api": {
-          "hosts": {{ server_ip | tojson }}
-        }
-      },
-      "punchplatform_feedback": {
-        "punchplatform_feedback_version": "{{ version.punch }}"
-      }
-      {% endif %}
       {% if security is defined %}
-      {% if gateway is defined %}
-      ,
-      {% endif %}
       "opendistro_security": {
         "opendistro_security_version": "{{ version.opendistro_security }}"
       },
